_sass/components/_homepage.scss
@import "settings/colors";
@import "settings/breakpoints";

.homepage-section {
  display: table;
  padding: 7em 0;
  width: 100%;
  @media (max-width: $breakpoint-s) {
    padding: 3em 0;
  }
  .showcase {
    display: table;
    clear: both;
    max-width: 2200px;
    margin: 0 auto;
  }
  .description {
    margin-top: 2em;
    h2 {
      margin: 0;
      @media (max-width: $breakpoint-s) {
        font-size: 1.8em;
      }
    }
    p {
      font-size: 1.275em;
      line-height: 1.5;
      margin: 1em 0;
    }
  }
  .button-container {
    display: flex;
    justify-content: start;
    align-items: center;
    flex-direction: row;
    @media (max-width: $breakpoint-s) {
      align-items: start;
      flex-direction: column;
    }
  }
  .orange-button {
    font-size: 1.2em;
    background-color: $button-orange;
    border-radius: 2px;
    color: $white;
    text-shadow: 0px 0px 4px $black;
    padding: 0.75em 1.25em;
    margin: 0 0.5em 0 0;
    text-align: center;
    text-decoration: none;
    &:hover {
      background-color: $button-hover;
      color: $white;
      text-decoration: none;
    }
    &:active,
    &:focus {
      background-color: $button-active;
      color: $white;
      text-decoration: none;
    }
    &:first-of-type {
      @media (max-width: $breakpoint-s) {
        margin-bottom: 1em;
      }
    }
  }
  .featurelist {
    clear: both;
    margin-top: 3em;
    display: flex;
    justify-content: start;
    align-items: center;
    flex-direction: row;
    @media (max-width: $breakpoint-s) {
      margin-top: 1em;
      align-items: start;
      flex-direction: column;
    }
    .feature {
      margin: 0 2em;
      @media (max-width: $breakpoint-s) {
        margin: 0 0 2em 0;
      }
      h3 {
        font-size: 1.275em;
        margin: 0.25em 0 0.5em 0;
      }
      p {
        font-size: 1em;
        margin: 0;
      }
    }
  }
  &.openstandards-section {
    width: 100%;
    @media (max-width: $breakpoint-l) {
      padding: 1em 1em 0 1em;
    }
    .description {
      margin-right: auto;
      margin-left: auto;
      text-align: center;
      max-width: 630px;
    }
    .cardlist {
      display: flex;
      justify-content: start;
      align-items: center;
      flex-direction: row;
      margin: 4em 0 0 0;
      @media (max-width: $breakpoint-l) {
        margin: 2em 0 0 0;
        align-items: start;
        flex-direction: column;
      }
      .card {
        text-align: center;
        background-color: $white;
        border: 1px solid $gray;
        border-radius: 5px;
        width: 300px;
        height: auto;
        padding: 2em;
        margin: 0 auto 2em auto;
        @media (max-width: $breakpoint-l) {
          width: 275px;
        }
        h3 {
          font-size: 1.275em;
          margin: 0.25em 0 0.5em 0;
        }
        p {
          font-size: 1em;
          margin: 0;
        }
      }
    }
  }
}

